--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.Itimer">
+        <activity android:name=".AboutActivity">
+        </activity>
         <activity
                 android:name=".MainActivity"
+                android:exported="true"
                 android:label="@string/app_name"
-                android:theme="@style/Theme.Itimer.NoActionBar"
-                android:exported="true">
+                android:theme="@style/Theme.Itimer.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
